--- a/src/components/BirdDescription.scss
+++ b/src/components/BirdDescription.scss
@@ -17,6 +17,10 @@
     align-items: center;
   }
 
+  @media (max-width: 360px) {
+    padding: 15px 10px;
+  }
+
   &__image {
     flex-shrink: 0;
     flex-grow: 0;
@@ -36,6 +40,10 @@
     @media (max-width: 660px) {
       margin-bottom: 20px;
       margin-right: 0;
+    }
+
+    @media (max-width: 360px) {
+      width: 100%;
     }
   }
 
