--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -6,6 +6,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 30px 0;
+
+    @media (max-width: 360px) {
+      padding: 15px 0;
+    }
   }
 
   &__logo {
