--- a/src/components/Question.scss
+++ b/src/components/Question.scss
@@ -28,6 +28,10 @@
     @media (max-width: 560px) {
       height: 200px;
     }
+
+    @media (max-width: 360px) {
+      height: 150px;
+    }
   }
 
   &__content {
